# ratatui_musicplayer

./: Cargo.toml  README.md
music/: 周杰伦 - 夜曲.lrc  国际歌.lrc  迈克尔·杰克逊 - Smooth Criminal.lrc
src/: action.rs  app.rs  components.rs  config.rs  error.rs  event.rs  fft.rs  file.rs  lyric.rs  main.rs  musicplayer.rs  render.rs  sounds.rs  tracing.rs  tui.rs  tur.rs
src/components/: analysis.rs  apptitle.rs  banner.rs  filelist.rs  home.rs  lyric.rs  musicprogress.rs  playzone.rs  quit.rs  tracinglog.rs
