[package]
name = "ratatui_music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = "0.25.0"
tokio-util = "0.7.10"
tokio = { version = "1.35.0", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.20"