[package]
name = "ratatui_music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = "0.25.0"
tokio-util = "0.7.10"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.20"
futures = "0.3.29"
serde = "1.0.193"
tokio-stream= { version = "0.1.14", features = [] }
rodio = "0.17.3"
rustfft = "6.2.0"
mp3-duration = "0.1.10"
indoc = "2.0.4"